--- a/index.html
+++ b/index.html
@@ -1049,7 +1049,8 @@
                 </div>
                 <!--/Section -->
                 <!-- Section Mobile -->
-                <section class="section-container mob-port w-hde">
+                <section class="section-container mob-port w-hde" style="background: #000;
+                padding-top: 20%;">
                     <div class="mobile-container image-1">
                         <div class="slider-element-container">
                             <div class="swiper-container">
