--- a/works.html
+++ b/works.html
@@ -3,8 +3,10 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Home page</title>
+    <link href="https://unpkg.com/swiper/swiper-bundle.min.css" type="text/css" rel="stylesheet">
     <link href="assets/resources/styles/css/page.css" type="text/css" rel="stylesheet" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -788,6 +790,7 @@
 
     <script src="/assets/vendors/lib/plugins.js"></script>
     <script src="./assets/resources/js/cursor.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/lazyload@2.0.0-rc.2/lazyload.js"></script>
     <script src="https://code.jquery.com/ui/1.12.0/jquery-ui.min.js"></script>
     <script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/130527/vanilla-tilt.min.js"></script>
     <script
@@ -795,8 +798,6 @@
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
     <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
     <script src="assets/resources/js/page.js"></script>
-    <script src="assets/resources/js/others.js"></script>
-
 
     <script>
         var s = Splitting();
