--- a/index.html
+++ b/index.html
@@ -424,7 +424,7 @@
                             <div class="chapt-icon play-icon" style="    width: 100px;">
                                 <!-- <div class="scroll-down" style="    width: 100px;"> -->
                                 <div class="scroll-circle">
-                                    <img class="icon-circles" src="/assets/resources/img/arrow-down-1.gif" />
+                                    <img class="icon-circles" src="/assets/resources/img/dwon.gif" />
                                     <svg class="scroll-icon" xmlns="http://www.w3.org/2000/svg"
                                         xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 115 115"
                                         style="enable-background:new 0 0 115 115;">
@@ -629,11 +629,11 @@
 
                         <div class="text-left">
                             <h2 class="works__hero__line" data-scroll data-scroll-direction="horizontal"
-                                data-scroll-speed="2">We deliver</h2>
+                                data-scroll-speed="2" data-horizontal="true">We deliver</h2>
                         </div>
                         <div>
                             <h2 class="works__hero__line" data-scroll data-scroll-direction="horizontal"
-                                data-scroll-speed="-3">captivating </h2>
+                                data-scroll-speed="-3" data-horizontal="true">captivating </h2>
                         </div>
                         <!-- <div class="smm">
                             <h2 class="works__hero__line"> that
@@ -641,18 +641,18 @@
                         </div> -->
                         <div>
                             <h2 class="works__hero__line" data-scroll data-scroll-direction="horizontal"
-                                data-scroll-speed="9">
+                                data-scroll-speed="9" data-horizontal="true">
                                 Products &
                             </h2>
                         </div>
 
                         <div class=" text-left ">
                             <h2 class="works__hero__line" data-scroll data-scroll-direction="horizontal"
-                                data-scroll-speed="-8"> incredible</h2>
+                                data-scroll-speed="-8" data-horizontal="true"> incredible</h2>
                         </div>
                         <div>
                             <h2 class="works__hero__line" data-scroll data-scroll-direction="horizontal"
-                                data-scroll-speed="6">
+                                data-scroll-speed="6" data-horizontal="true">
                                 Experiences
                             </h2>
                         </div>
@@ -1058,40 +1058,51 @@
                                     <div class="swiper-slide">
                                         <div class="content">
                                             <div class="port">
-                                                <img src="/assets/resources/img/01-patronum.png">
-                                                <h2><span>01</span>Patronum</h2>
+                                                <a href="patronum.html" data-cursor-text="View"
+                                                    data-cursor=" -color-accent-lilac">
+                                                    <img src="/assets/resources/img/01-patronum.png">
+                                                    <h2><span>01</span>Patronum</h2>
+                                                </a>
                                             </div>
                                         </div>
                                     </div>
                                     <div class="swiper-slide">
                                         <div class="content">
                                             <div class="port">
-                                                <img src="/assets/resources/img/03-certvault.png">
-                                                <h2><span>02</span>Certvault</h2>
+                                                <a href="certvault.html">
+                                                    <img src="/assets/resources/img/03-certvault.png">
+                                                    <h2><span>02</span>Certvault</h2>
+                                                </a>
                                             </div>
                                         </div>
                                     </div>
                                     <div class="swiper-slide">
                                         <div class="content">
                                             <div class="port">
-                                                <img src="/assets/resources/img/04-bespin.png">
-                                                <h2><span>03</span>Bespin</h2>
+                                                <a href="bespin.html">
+                                                    <img src="/assets/resources/img/04-bespin.png">
+                                                    <h2><span>03</span>Bespin</h2>
+                                                </a>
                                             </div>
                                         </div>
                                     </div>
                                     <div class="swiper-slide">
                                         <div class="content">
                                             <div class="port">
-                                                <img src="/assets/resources/img/05-quickx.png">
-                                                <h2><span>04</span>Quickx</h2>
+                                                <a href="quickx.html">
+                                                    <img src="/assets/resources/img/05-quickx.png">
+                                                    <h2><span>04</span>Quickx</h2>
+                                                </a>
                                             </div>
                                         </div>
                                     </div>
                                     <div class="swiper-slide">
                                         <div class="content">
                                             <div class="port">
-                                                <img src="/assets/resources/img/06-dmtca.png">
-                                                <h2><span>05</span>Dmtca</h2>
+                                                <a href="dmtca.html">
+                                                    <img src="/assets/resources/img/06-dmtca.png">
+                                                    <h2><span>05</span>Dmtca</h2>
+                                                </a>
                                             </div>
                                         </div>
                                     </div>
@@ -1394,8 +1405,7 @@
     <script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/130527/vanilla-tilt.min.js"></script>
     <script
         src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui-touch-punch/0.2.3/jquery.ui.touch-punch.min.js"></script>
-    <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
-    <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
+
     <script src="assets/resources/js/page.js"></script>
 
     <script>
