--- a/index.html
+++ b/index.html
@@ -622,11 +622,6 @@
                 <!-- section scrolll -->
                 <div class="works__inner" data-humcolor="#fff" data-cursor="-color-whites" style="background: #000000;">
                     <div class="works__hero">
-                        <!-- <div class="smm">
-                            <h2 class="works__hero__line">We Create Digital
-                            </h2>
-                        </div> -->
-
                         <div class="text-left">
                             <h2 class="works__hero__line" data-scroll data-scroll-direction="horizontal"
                                 data-scroll-speed="2" data-horizontal="true">We deliver</h2>
@@ -635,10 +630,6 @@
                             <h2 class="works__hero__line" data-scroll data-scroll-direction="horizontal"
                                 data-scroll-speed="-3" data-horizontal="true">captivating </h2>
                         </div>
-                        <!-- <div class="smm">
-                            <h2 class="works__hero__line"> that
-                            </h2>
-                        </div> -->
                         <div>
                             <h2 class="works__hero__line" data-scroll data-scroll-direction="horizontal"
                                 data-scroll-speed="9" data-horizontal="true">
@@ -660,24 +651,10 @@
                     </div>
                 </div>
                 <!-- sdh -->
-                <!-- About Section -->
-                <!-- <section id="about2" class="chnage" data-humcolor="#000">
-                    <div class="container">
-
-                        <div class="about-f">
-                            <img src="/assets/resources/img/good-section.svg" alt="" />
-                        </div>
-                    </div>
-                </section> -->
-                <!-- end -->
-
                 <section class="about-us-section" data-humcolor="#000">
-                    <div class="about-us-inner d-flex">
-                        <div class="about-us-images res">
-                            <img class="prlx" src="/assets/resources/img/about.png" alt="" title="" />
-                            <!-- <video autoplay preload="" class="prlx">
-                                <source src="/assets/resources/wav.mp4">
-                            </video> -->
+                    <div class="about-us-inner d-flex" id="scroll-direction">
+                        <div class="about-us-images res o-image" data-scroll>
+                            <img class="" src="/assets/resources/img/about.png" alt="" title="" />
                         </div>
 
                         <div class="about-us-content">
@@ -898,7 +875,7 @@
                             <div data-navigate="scroll" class="a-recent-works dark">
 
                                 <!--Background Text-->
-                                <div class="recent-works-bg-text">
+                                <div class="recent-works-bg-text c-speed-block_title" data-scroll="">
                                     Our Works
                                 </div>
                                 <!--Background Text-->
@@ -922,16 +899,16 @@
                                             data-cursor=" -color-accent-lilac">
 
                                             <!--Project Image-->
-                                            <div class="ar-work-image">
+                                            <div class="ar-work-image o-image" data-scroll>
                                                 <img alt="Project Image" src="/assets/resources/img/work-patronum.png">
                                             </div>
                                             <!--/Project Image-->
                                             <!--Project Title-->
-                                            <div class="ar-work-title">Patronum</div>
+                                            <div class="ar-work-title c-speed-block_title" data-scroll="">Patronum</div>
                                             <!--/Project Title-->
 
                                             <!--Project Category-->
-                                            <div class="ar-work-cat">Production</div>
+                                            <div class="ar-work-cat c-speed-block_title" data-scroll="">Production</div>
                                             <!--/Project Category-->
                                         </a>
 
@@ -948,16 +925,18 @@
                                             data-cursor="-color-cert">
 
                                             <!--Project Image-->
-                                            <div class="ar-work-image">
+                                            <div class="ar-work-image o-image" data-scroll>
                                                 <img alt="Project Image" src="/assets/resources/img/work-certvault.png">
                                             </div>
                                             <!--/Project Image-->
                                             <!--Project Title-->
-                                            <div class="ar-work-title">Certvault</div>
+                                            <div class="ar-work-title c-speed-block_title" data-scroll="">Certvault
+                                            </div>
                                             <!--/Project Title-->
 
                                             <!--Project Category-->
-                                            <div class="ar-work-cat">Photography</div>
+                                            <div class="ar-work-cat c-speed-block_title" data-scroll="">Photography
+                                            </div>
                                             <!--/Project Category-->
                                         </a>
 
@@ -972,16 +951,17 @@
                                             data-cursor="-color-dmtca">
 
                                             <!--Project Image-->
-                                            <div class="ar-work-image">
+                                            <div class="ar-work-image o-image" data-scroll>
                                                 <img alt="Project Image" src="./assets/resources/img/work-dmtca.png">
                                             </div>
                                             <!--/Project Image-->
                                             <!--Project Title-->
-                                            <div class="ar-work-title">Dmtca</div>
+                                            <div class="ar-work-title c-speed-block_title" data-scroll="">Dmtca</div>
                                             <!--/Project Title-->
 
                                             <!--Project Category-->
-                                            <div class="ar-work-cat">Photography</div>
+                                            <div class="ar-work-cat c-speed-block_title" data-scroll="">Photography
+                                            </div>
                                             <!--/Project Category-->
                                         </a>
 
@@ -996,17 +976,17 @@
                                             data-cursor="-color-bespin">
 
                                             <!--Project Image-->
-                                            <div class="ar-work-image">
+                                            <div class="ar-work-image o-image" data-scroll>
                                                 <img alt="Project Image" src="/assets/resources/img/work-quickx.png">
                                             </div>
                                             <!--/Project Image-->
 
                                             <!--Project Title-->
-                                            <div class="ar-work-title">Quickx</div>
+                                            <div class="ar-work-title c-speed-block_title" data-scroll="">Quickx</div>
                                             <!--/Project Title-->
 
                                             <!--Project Category-->
-                                            <div class="ar-work-cat">Production</div>
+                                            <div class="ar-work-cat c-speed-block_title" data-scroll="">Production</div>
                                             <!--/Project Category-->
                                         </a>
 
@@ -1020,17 +1000,17 @@
                                         <!--Project URL-->
                                         <a href="">
                                             <!--Project Image-->
-                                            <div class="ar-work-image">
+                                            <div class="ar-work-image o-image" data-scroll>
                                                 <img alt="Project Image" src="/assets/resources/img/work-ystart.png">
                                             </div>
                                             <!--/Project Image-->
 
                                             <!--Project Title-->
-                                            <div class="ar-work-title">Ystart</div>
+                                            <div class="ar-work-title c-speed-block_title" data-scroll="">Ystart</div>
                                             <!--/Project Title-->
 
                                             <!--Project Category-->
-                                            <div class="ar-work-cat">Branding</div>
+                                            <div class="ar-work-cat c-speed-block_title" data-scroll="">Branding</div>
                                             <!--/Project Category-->
                                         </a>
 
@@ -1057,7 +1037,7 @@
                                 <div class="swiper-wrapper">
                                     <div class="swiper-slide">
                                         <div class="content">
-                                            <div class="port">
+                                            <div class="port o-image" data-scroll>
                                                 <a href="patronum.html" data-cursor-text="View"
                                                     data-cursor=" -color-accent-lilac">
                                                     <img src="/assets/resources/img/01-patronum.png">
@@ -1068,7 +1048,7 @@
                                     </div>
                                     <div class="swiper-slide">
                                         <div class="content">
-                                            <div class="port">
+                                            <div class="port o-image" data-scroll>
                                                 <a href="certvault.html">
                                                     <img src="/assets/resources/img/03-certvault.png">
                                                     <h2><span>02</span>Certvault</h2>
@@ -1078,7 +1058,7 @@
                                     </div>
                                     <div class="swiper-slide">
                                         <div class="content">
-                                            <div class="port">
+                                            <div class="port o-image" data-scroll>
                                                 <a href="bespin.html">
                                                     <img src="/assets/resources/img/04-bespin.png">
                                                     <h2><span>03</span>Bespin</h2>
@@ -1088,7 +1068,7 @@
                                     </div>
                                     <div class="swiper-slide">
                                         <div class="content">
-                                            <div class="port">
+                                            <div class="port o-image" data-scroll>
                                                 <a href="quickx.html">
                                                     <img src="/assets/resources/img/05-quickx.png">
                                                     <h2><span>04</span>Quickx</h2>
@@ -1098,7 +1078,7 @@
                                     </div>
                                     <div class="swiper-slide">
                                         <div class="content">
-                                            <div class="port">
+                                            <div class="port o-image" data-scroll>
                                                 <a href="dmtca.html">
                                                     <img src="/assets/resources/img/06-dmtca.png">
                                                     <h2><span>05</span>Dmtca</h2>
