--- a/works.html
+++ b/works.html
@@ -511,21 +511,26 @@
                             </div>
                         </div>
                         <div class="footer-flex">
-                            <div class="footer-right">
-                                <a class="cb-outro-social-item" data-cursor="-opaque" href="works.html"><span
-                                        class="cb-outro-social-item-title"><span
-                                            data-text="Portfolio">Portfolio</span></span></a>
-                                <a class="cb-outro-social-item" data-cursor="-opaque" href="career.html"><span
-                                        class="cb-outro-social-item-title"><span
-                                            data-text="Career">Career</span></span></a>
-                                <a class="cb-outro-social-item" data-cursor="-opaque" href="blogs.html"><span
-                                        class="cb-outro-social-item-title"><span data-text="Blog">Blog</span></span></a>
+                      <div class="footer-right">
                                 <a class="cb-outro-social-item" data-cursor="-opaque" href="about.html"><span
                                         class="cb-outro-social-item-title"><span
                                             data-text="About">About</span></span></a>
                                 <a class="cb-outro-social-item" data-cursor="-opaque" href="services.html"><span
                                         class="cb-outro-social-item-title"><span
-                                            data-text="Services">Services</span></span></a>
+                                            data-text="Expertises">Expertises</span></span></a>
+                                <a class="cb-outro-social-item" data-cursor="-opaque" href="works.html"><span
+                                        class="cb-outro-social-item-title"><span
+                                            data-text="Works">Works</span></span></a>
+                                <a class="cb-outro-social-item" data-cursor="-opaque" href="blogs.html"><span
+                                        class="cb-outro-social-item-title"><span
+                                            data-text="Insights">Insights</span></span></a>
+
+                                <a class="cb-outro-social-item" data-cursor="-opaque"><span
+                                        class="cb-outro-social-item-title"><span
+                                            data-text="Career">Career</span></span></a>
+                                <a class="cb-outro-social-item" data-cursor="-opaque" href="contact.html"><span
+                                        class="cb-outro-social-item-title"><span
+                                            data-text="Contact">Contact</span></span></a>
                             </div>
                             <div class="footer-left">
                                 <div class="botom">
